# sourceweave-web-search

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  READ_PAGE_IMAGE_SUPPORT_PLAN.md  docker-compose.source.yml  docker-compose.yml  pyproject.toml  server.json  web_research_tool.py
.agents/skills/sourceweave-publishing/: SKILL.md
.agents/skills/sourceweave-publishing/evals/: evals.json
.agents/skills/sourceweave-search-tool-testing/: SKILL.md
.agents/skills/sourceweave-search-tool-testing/evals/: evals.json
.github/workflows/: publish-mcp-registry.yml  release-gate.yml  release.yml
artifacts/: sourceweave_web_search.py
docs/managed-local-runtime/: brd.md  srs.md  technical-breakdown.md  test-strategy.md
docs/managed-local-runtime/plan/: feature-managed-local-runtime-1.md
infrastructure/: crawl4ai.yml  redis.yml  searxng-settings.yml  searxng.yml
scripts/: bootstrap_openwebui.py  build_openwebui_tool.py  run_tool_call.py  sync_release_metadata.py
skills/sourceweave-publishing/: SKILL.md
skills/sourceweave-publishing/evals/: evals.json
skills/sourceweave-search-tool-testing/: SKILL.md
skills/sourceweave-search-tool-testing/evals/: evals.json
skills/web-research-tool-testing/: SKILL.md
skills/web-research-tool-testing/evals/: evals.json
src/sourceweave_web_search/: __init__.py  build_openwebui.py  cli.py  config.py  managed_runtime.py  mcp_server.py  release_metadata.py  tool.py
src/sourceweave_web_search/managed_runtime_assets/: __init__.py  compose.yaml
src/web_research_studio/: __init__.py  build_openwebui.py  cli.py  config.py  mcp_server.py  tool.py
tests/: test_config.py  test_managed_runtime.py  test_packaging.py  test_phase4.py  test_tool.py
