[project]
name = "sourceweave-web-search"
version = "0.2.0"
description = "SourceWeave: AI web search with OpenWebUI and MCP delivery targets"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mohammad ElNaqa", email = "55245971+MRNAQA@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "loguru",
    "markitdown[docx,pdf,pptx,xlsx]",
    "mcp>=1.8.0",
    "pydantic",
    "redis>=5.0",
]

[project.scripts]
sourceweave-search = "sourceweave_web_search.cli:main"
sourceweave-search-mcp = "sourceweave_web_search.mcp_server:main"
sourceweave-build-openwebui = "sourceweave_web_search.build_openwebui:main"

[dependency-groups]
dev = [
    "crawl4ai",
    "pytest",
    "requests",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
